Brasero does not burn bin+cue file
Well i tried to write a bin+cue file but brasero din't work due to an error, tried poweriso and worked fine
Just in case this should be the error
BraseroWodim stderr: Unsupported sector size 2352 for data on line 2 in '/path/to/image.cue'.
And this is the complete log brasero-session.log
For the record, i'm using fedora 33 workstation