cdrkit:	Add better error message for "Unsupported sector size" errors

Add "Unsupported sector size" error to the list of supported error
messages, so we display a better error message to the user.

Refer: https://gitlab.gnome.org/GNOME/brasero/-/issues/353